--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -287,6 +287,7 @@ There are many things a GitHub workflow can do. This documentation focuses on on
 
 - GitHub workflow security
 - GitHub workflow file parts
+- GitHub workflow additional capabilities
 
 Custom triggers
 
@@ -448,6 +449,7 @@ There are many things a GitHub workflow can do. This documentation focuses on on
 
 - GitHub workflow security
 - GitHub workflow file parts
+- GitHub workflow additional capabilities
 
 Custom triggers
 
