Add links to pages from intro, clean up links and comments

--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -2,7 +2,7 @@
 id: alkiln_writing
 title: Writing ALKiln tests
 sidebar_label: WIP Writing tests
-slug: /alkiln/writing_tests
+slug: /alkiln/writing
 ---
 
 
@@ -95,7 +95,7 @@ Gherkin instructions...
 
 
 
-## Frequently asked questions (FAQ)
+## Frequently asked questions (FAQ) {#faq}
 
 ### Checkboxes {#faq-checkbox-values}
 
