--- a/docs/alkiln/security.mdx
+++ b/docs/alkiln/security.mdx
@@ -5,6 +5,8 @@ sidebar_label: Security
 slug: /alkiln/security
 ---
 
+import SecureEnvVars from './components/\_secure_env_vars.md';
+
 This page will help you learn some steps you can take to protect yourself and your users as you develop tests with ALKiln. It will also talk about the security practices ALKiln uses.
 
 Using a third-party library or package is always a risk. That said, we take measures to help secure our code, such as protecting our release branches and requiring reviews before merging any new code.
@@ -196,13 +198,9 @@ jobs:
 
 We recommend that you start your environment variable names with "ALKILN_". That will help avoid conflicting with the environment variables of your operating system.
 
-ALKiln avoids taking pictures or downloading the HTML of pages that use environment variables. ALKiln avoids printing the value of an environment variable anywhere in the report or in the console.
+<SecureEnvVars/>
 
 Right now Story Tables are unable to use environment variables to set variables.
-
-:::danger
-Avoid manually taking pictures of pages with sensitive information. It is probably possible to trigger those pictures in Steps you write yourself, but we highly recommend against that for security reasons.
-:::
 
 [^org_secrets] [GitHub organization secrets](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-an-organization) can be useful if an organization wants to create a variable that all of its repositories will be able to use and avoid creating that secret in every individual repository.
 
@@ -321,13 +319,9 @@ The use that environment variable name in your test. For example:
 
 We recommend that you start your environment variable names with "ALKILN_". That will help avoid conflicting with the environment variables of your operating system.
 
-ALKiln avoids taking pictures or downloading the HTML of pages that use environment variables. ALKiln avoids printing the value of an environment variable anywhere in the report or in the console.
+<SecureEnvVars/>
 
 Right now Story Tables are unable to use environment variables to set variables.
-
-:::danger
-Avoid manually taking pictures of pages with sensitive information. It is probably possible to trigger those pictures in Steps you write yourself, but we highly recommend against that for security reasons.
-:::
 
 
 ## Things to worry about less
@@ -355,7 +349,7 @@ When you run the tests in GitHub, you can see the logs of the test action's job 
 
 If you are still worried about the logs and artifacts in GitHub, [you can delete the logs](https://docs.github.com/en/actions/monitoring-and-troubleshooting-workflows/using-workflow-run-logs#deleting-logs) and [you can delete the artifacts](https://docs.github.com/en/actions/managing-workflow-runs/removing-workflow-artifacts).
 
-We still recommend that you avoid manually telling ALKiln tests to take pictures or screenshots of pages with sensitive information.
+<SecureEnvVars/>
 
 
 ### Worry less: Pull request triggers {#pull-requests}
@@ -401,9 +395,9 @@ If you find an ALKiln security vulnerability, you can [report it to us privately
 
 **This is for:** Everyone
 
-Since [environment variables might contain sensitive information](#sensitive-info-playground), ALKiln avoids taking pictures or downloading the HTML of pages that use environment variables. ALKiln avoids printing the value of an environment variable anywhere in the report or in the console.
+[Environment variables might contain sensitive information](#sensitive-info-playground). Because of this ALKiln takes extra care with them.
 
-There are probably ways for you to get around this restriction, but you should avoid that to keep your tests more secure.
+<SecureEnvVars/>
 
 
 ### ALKiln freezes the versions of its dependencies {#alkiln-freezes-dependencies}
